--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,114 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_accessories_id"
-    tools:openDrawer="start"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+
     <include
-        layout="@layout/app_bar_accessories"
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <LinearLayout
-        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        />
+
+
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#febc03"
-        android:weightSum="1"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="0.2"
-            android:background="@drawable/nikitashalogo">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
-                android:gravity="center"
-                android:layout_marginTop="20sp"
-                android:textSize="18sp"
-                android:textColor="#eeffffff"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="0.8"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="HOME"
-                android:gravity="center"
-                android:layout_marginTop="20sp"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#eeffffff"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="ABOUT US"
-                android:gravity="center"
-                android:layout_marginTop="20sp"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#eeffffff"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="OUR PRODUCT"
-                android:gravity="center"
-                android:layout_marginTop="20sp"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#eeffffff"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CATEGORY"
-                android:gravity="center"
-                android:layout_marginTop="20sp"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#eeffffff"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="RATE ON GOOGLE"
-                android:gravity="center"
-                android:layout_marginTop="20sp"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#eeffffff"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="bottom">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Vecta Technologies"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    android:textColor="#ee080808"
-                    android:layout_marginBottom="10sp"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="V.1.0"
-                    android:gravity="center"
-                    android:textSize="10sp"
-                    android:textColor="#ee080808"
-                    android:layout_marginBottom="20sp"/>
-
-            </LinearLayout>
-        </LinearLayout>
-
-
-    </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
