--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nikitasha.ContactUsFragment">
+    tools:context="com.nikitasha.OurProducts">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
