--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -4,11 +4,15 @@
     android:layout_height="match_parent"
     tools:context="com.nikitasha.CategoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <view
+        android:id="@+id/recycler_vehicleMarket_id"
+        class="android.support.v7.widget.RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Category"
-        android:gravity="center"/>
-
+        android:visibility="gone"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_centerInParent="true"
+        android:background="#eee"/>
 </FrameLayout>
